<resources>
    <string name="app_name">WidgetApp</string>
    <string name="layout_transition">Layout Transition</string>
    <string name="hello_world">Hello World</string>
    <string name="success_view">Success View</string>
    <string name="animated_vector_drawable">Animated Vector Drawable</string>
    <string name="camera_image_view">Camera Image View</string>
    <string name="banner">Banner</string>
    <string name="nested_scroll">Nested Scroll</string>
    <string name="canvas">Canvas</string>
    <string name="clear">Clear</string>
    <string name="circle_image">CircleImage</string>
    <string name="blur_image">BlurImage</string>
</resources>