<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/layout_transition"
            android:id="@+id/layout_transition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/success_view"
            android:id="@+id/success_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/animated_vector_drawable"
            android:id="@+id/animated_drawable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/camera_image_view"
            android:text="@string/camera_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/banner"
            android:text="@string/banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/nested_scroll"
            android:id="@+id/nested_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/canvas"
            android:id="@+id/canvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/circle_image"
            android:id="@+id/circle_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/blur_image"
            android:id="@+id/blur_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>